# SA-E

./: README.md
dc3/: a.out  dc3.cc  dc3.cu  dcr.cc
old/: BWTSD.cc  BWTSE.cc  Decode.cc  Encode.cc  Reference.cc  bwt-headers.h  reference-bwt.cc
old/CUDA/: 1024.txt  2048.txt  Radix(ScatterAddress).cu  Radix.cu  Strrad.cu  a.out  dc3.cu
old/benchmarking/: 1024.txt  512.txt  8.txt  BWTSD.cc  BWTSE.cc  CMakeCache.txt  CMakeLists.txt  Makefile  bench.cc  cmake_install.cmake  d1024.txt  d2048.txt  d512.txt  d8.txt  includes.h  runbench
